--- a/FARTHER_GIFT_CSS/FDG9.css
+++ b/FARTHER_GIFT_CSS/FDG9.css
@@ -506,3 +506,150 @@ li:hover{
       padding:0px 5px;
     }
 
+
+      @media (min-width: 1366px){
+
+
+        .Flowerimg-1 {
+    gap: 17px;
+    font-size: 16px;
+    height: 64px;
+    font-family: Arial, sans-serif;
+    font-weight: 800;
+}
+
+.nav2-img {
+    display: flex;
+    gap: 5px;
+}
+  
+.button-1 {
+    width: 128px;
+    height: 40px;
+    font-size: 21px;
+}
+
+  .Z{
+     width: 580px;
+      height: 570px;
+    }
+
+    .p1, .p3,.p4 {
+    font-size: 25px;
+    }
+
+    .p2 {
+    font-size: 35px;
+    }
+    .parents_2 {
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+    margin: 60px 0px;
+}
+.griddiv {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 20px 0px;
+}
+
+    .A {
+    width: 220px;
+    height: 85px;
+    padding: 26px 0px;
+    font-size: 25px;
+}
+.B{
+   width: 220px;
+    height: 85px;
+     padding: 25px 0px;
+     font-size: 25px;
+}
+
+.fieldset-1,.fieldset-2 {
+    width: 450px;
+    height: 78px;
+}
+input, input :focus {
+    font-size: 25px;
+    padding: 7px 0px;
+    margin-left: 21px;
+}
+legend {
+    color: #353837;
+    font-size: 21px;
+    margin: 1px 17px;
+}
+.star_1 {
+    display: grid;
+    gap: 20px;
+}
+.buttonserch {
+    width: 450px;
+    height: 67px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    color: white;
+    margin: 18px 0px;
+}
+.p10 {
+    font-weight: bold;
+    color: blue;
+    font-size: 25px;
+}
+.p5 {
+    font-size: 52px;
+    padding-bottom: 14px;
+}
+.p6 {
+    padding: 2px 0px;
+    font-size: 21px;
+}
+.p7 {
+    font-size: 35px;
+    padding: 20px 0px;
+    word-spacing: 4px;
+}
+.parents_5 {
+    padding: 40px 50px;
+}
+p {
+    padding: 2px 0px;
+    font-size: 19px;
+}
+.search {
+    width: 25px;
+    height: 24px;
+}
+.search {
+        width: 25px;
+        height: 28px;
+    }
+    .footer_text {
+    font-size: 22px;
+    padding: 15px 0px;
+}
+li {
+    padding: 6px 0px;
+    color: #261f23;
+    font-size: 20px;
+}
+.proflowers-logo-1 {
+    width: 310px;
+    margin: 40px 40px;
+}
+.footerchilde_1 {
+    margin: 27px 0px;
+    gap: 21px;
+}
+.parensts_10 {
+    background-color: #f3eeea;
+    height: 999px;
+    margin-top: 50px;
+}
+.lasfooter_text {
+    font-size: 20px;
+}
+      }
