--- a/CSS/Shop_brithday.css
+++ b/CSS/Shop_brithday.css
@@ -715,13 +715,12 @@ li:hover{
           height: 68px;
         
         }
-
-    .Calendar-img {
-    width: 49px;
-    height: 57px;
-    top: 10px;
-    left: 252px;
-}
+.Calendar-img {
+        width: 55px;
+        height: 58px;
+        top: 10px;
+        left: 252px;
+    }
 .star_3{
   font-size: 30px;
 }
@@ -823,4 +822,7 @@ span {
     font-size: 20px;
 }
 
+    .dropdown-content{
+      font-size: 18px;
+    }
      }
