--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -717,12 +717,12 @@ li:hover{
         
         }
 
-    .Calendar-img {
-    width: 49px;
-    height: 57px;
-    top: 10px;
-    left: 252px;
-}
+       .Calendar-img {
+        width: 55px;
+        height: 58px;
+        top: 10px;
+        left: 252px;
+    }
 .star_3{
   font-size: 30px;
 }
@@ -745,6 +745,7 @@ li:hover{
 }
 
 legend{
+  font-size: 18px;
   margin: 0px 15px;
 } 
 
@@ -823,5 +824,8 @@ span {
     padding: 0px 5px;
     font-size: 20px;
 }
+    .dropdown-content{
+      font-size: 18px;
+    }
 
      }
