--- a/SUMMAR_CSS/SF1.css
+++ b/SUMMAR_CSS/SF1.css
@@ -558,14 +558,14 @@ li:hover{
     height: 80px;
     padding: 26px 0px;
     font-size: 25px;
-     border: 3px solid black;
+     border: 2px solid black;
 }
 .B{
    width: 210px;
     height: 80px;
      padding: 25px 0px;
      font-size: 25px;
-      border: 3px solid gainsboro;
+      border: 2px solid rgb(158, 158, 158);
 }
 
 .fieldset-1,.fieldset-2 {
