--- a/CSS/index.css
+++ b/CSS/index.css
@@ -403,15 +403,14 @@
 }
 
 .happiest_img{
-  width: 620px;
+  width: 100%;
   height: 370px;
-  object-fit:cover;
+  object-fit:inherit;
   
 }
 .happiest_3{
   border: 2px solid #f3eeea;
    height: 370px;
-   width: 606px;
    background-color: #eee1d6;
    padding: 100px 0px;
    word-wrap: 2px;
