--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1288,11 +1288,7 @@ li:hover{
       padding:0px 5px;
     }
 
-    @media (min-width: 1446px){
-
-
-
-
+    @media (min-width: 1440px){
     .A,.K,.V,.M{
       width: 300px;
       height: 270px;
@@ -1356,15 +1352,19 @@ li:hover{
 
 
 .happiest_img,.blooms_img{
- width: 770px;
+ width: 100%;
   height: 380px;
   object-fit:fill;
   
   
 }
+
+.happiest{
+  width: 100%;
+}
 .happiest_3,.blooms_3{
   border: 2px solid #f3eeea;
-  width: 762px;
+  width: 100%;
    height: 380px;
    background-color: #eee1d6;
    padding: 100px 0px;
