--- a/CSS/Farther_gift.css
+++ b/CSS/Farther_gift.css
@@ -824,6 +824,93 @@ span {
       font-size: 18px;
     }
 
-
-
      }
+
+     @media (min-width: 481px) and (max-width: 840px){
+.button-1 {
+    width: 96px;
+    height: 40px;
+    font-size: 16px;
+}
+
+.star_1 {
+    gap: 10px;
+    padding: 40px 30px;
+}
+
+.star_3{
+  font-size: 25px;
+}
+.Summer_text {
+    font-size: 30px;
+    padding: 8px 0px;
+}
+.A,.B,.C {
+  width: 220px;
+  height: 200px;
+}
+.parents_7,.parents_8 ,.parents_9  {
+     gap: 30px;
+}
+.summar_text_4,.summar_text_2,.summar_text {
+    text-align: center;
+    padding: 10px 0px;
+    font-size: 15px;
+    color: #1a1b20;
+}
+.summar_text_5,.summar_text_3,.summar_text_1{
+  font-size: 15px;
+}
+p {
+    padding: 2px 0;
+    font-size: 11px;
+}
+
+    .star_3 {
+        font-size: 19px;
+        text-align: center;
+    }
+
+    footer{
+  gap: 20px;
+  padding: 0px 30px;
+}
+.footer-form {
+    width: 185px;
+    height: 45px;
+    font-size: 17px;
+}
+.button_form {
+    width: 88px;
+    height: 44px;
+}
+li{
+  font-size: 14px;
+}
+.footer_text {
+    font-weight: bolder;
+    font-size: 14px;
+    padding: 10px 0px;
+}
+
+.footerchilde_1 {
+    margin: 15px 0px;
+    gap: 15px;
+}
+.lasfooter_text {
+    text-align: center;
+    margin: 40px 28px;
+}
+span{
+  font-size: 14px;
+}
+.parensts_10 {
+    height: 740px;
+}
+.proflowers-logo-1 {
+    width: 238px;
+    margin: 35px 25px;
+}
+
+
+        }
