--- a/GRADUATION_CSS/GAS8.css
+++ b/GRADUATION_CSS/GAS8.css
@@ -656,3 +656,113 @@ li {
       font-size: 18px;
     }
       }
+
+
+
+      @media (min-width: 481px) and (max-width: 840px){
+
+
+    .parents_2 {
+    gap: 20px;
+    margin: 50px 0px;
+    justify-content: space-around;
+}
+
+.Z{
+     width: 360px;
+      height: 350px;
+    }
+
+    .A {
+    width: 170px;
+    height: 50px;
+    padding: 12px 0px;
+}
+.B{
+   width: 170px;
+    height: 50px;
+    padding: 12px 0px;
+}
+.griddiv {
+    gap: 10px;
+    margin: 15px 0px;
+}
+.p1, .p3,.p4 {
+    font-weight: bold;
+    font-size: 14px;
+}
+.p2 {
+    font-size: 20px;
+    padding: 6px 0px;
+}
+.fieldset-1 {
+    width: 348px;
+    height: 59px;
+}
+.fieldset-2 {
+    width: 348px;
+    height: 59px;
+}
+.buttonserch {
+    width: 354px;
+    height: 50px;
+}
+.button-1 {
+    width: 93px;
+    height: 43px;
+    font-size: 15px;
+    background-color: #fff;
+    border: transparent;
+    color: #252727;
+}
+
+.p5{
+  font-size: 32px;
+}
+.p6{
+  font-size: 13px;
+}
+.p7 {
+    font-size: 25px;
+    padding: 17px 0px;
+    word-spacing: 4px;
+}
+.footer{
+  gap: 27px;
+  padding: 0px 30px;
+}
+.footer-form {
+    width: 185px;
+    height: 45px;
+    font-size: 17px;
+}
+.button_form {
+    width: 88px;
+    height: 44px;
+}
+li{
+  font-size: 14px;
+}
+.footer_text {
+    font-weight: bolder;
+    font-size: 14px;
+    padding: 10px 0px;
+}
+
+.footerchilde_1 {
+    margin: 15px 0px;
+    gap: 15px;
+}
+.lasfooter_text {
+    text-align: center;
+    margin: 40px 28px;
+}
+span{
+  font-size: 14px;
+}
+.parensts_10 {
+    height: 740px;
+}
+
+
+        }
