--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1629,7 +1629,7 @@ span{
 .blooms ,.happiest{
   display:flex;
   overflow: scroll;
-  width: 70%;
+  width: 90%;
   margin:auto;
   padding-top:30px ;
 }
@@ -1798,16 +1798,11 @@ li,.footer_text{
 }
 .proflowers-logo-1 {
     width: 250px;
-    margin: 25px 87px;
+    margin: 0px 87px;
 }
-.footer-form {
-    width: 304px;
-    height: 48px;
-    text-align: center;
-     margin:0px;
-}
+
 .footer-form_1{
-  padding: 0px 20px;
+  display: none;
 }
 .footerchilde_1 {
     display: flex;
@@ -1823,10 +1818,14 @@ li,.footer_text{
 }
 .parensts_10 {
     background-color: #f3eeea;
-    height: 300px;
+    height: 250px;
+    padding: 30px 0px;
 }
 .slider_3D{
   display: none;
+}
+.footer{
+  justify-content: center;
 }
 
       }
