--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1717,12 +1717,12 @@ input, input :focus {
 }
 
 .happiest_img,.blooms_img {
-    width: 428px;
+    width: 100%;
     height: 255px;
 }
 .happiest_3, .blooms_3 {
     border: 2px solid #f3eeea;
-    width: 427px;
+    width:100%;
     height: 255px;
     background-color: #eee1d6;
     padding: 30px 0px;
