--- a/MODERN_CSS/MF9.css
+++ b/MODERN_CSS/MF9.css
@@ -928,6 +928,25 @@ li,.footer_text{
     margin: 18px 0px;
     font-size: 12px;
 }
+.arrow{
+  display: none;
+}
+
+.main-image img {
+    width: 342px;
+    height: 330px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    border-radius: 6px;
+    transition: 0.3s;
+}
   
  }
 
@@ -961,6 +980,24 @@ li,.footer_text{
 .proflowers-logo-1 {
         width: 250px !important;
         margin: 0px 20px !important;
+    }
+      .arrow{
+  display: none;
+}
+.main-image img {
+           width: 300px !important;
+        height: 300px !important;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
+}
+
+.thumbnails img {
+      width: 50px !important;
+      height: 50px !important;
+      cursor: pointer;
+      border: 2px solid transparent;
+      border-radius: 6px;
+      transition: 0.3s;
     }
 
 }
@@ -1054,5 +1091,16 @@ li,.footer_text{
     text-align: center;
     margin: 18px 0px;
     font-size: 12px;
+}
+
+
+ .arrow{
+  display: none;
+}
+.main-image img {
+           width: 372px;
+        height: 344px;
+    border-radius: 10px;
+    border: 1px solid rgb(177, 176, 176);
 }
  }
